Converet add model and login modals to modal template

--- a/src/app.scss
+++ b/src/app.scss
@@ -322,7 +322,7 @@ uib-accordion .panel-group {
   background-color: #fff;
 }
 
-.search-modal {
+modal-body {
 
   .empty-message {
     padding: 3px 20px;
