--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -1,7 +1,7 @@
 <modal-template>
   <modal-title translate>Search classes</modal-title>
 
-  <modal-body class="search-modal">
+  <modal-body>
 
     <button ng-if="!ctrl.onlySelection" type="button" class="btn btn-default btn-md pull-right" ng-click="ctrl.createNewClass()">
       <span class="glyphicon glyphicon-plus"></span>
