--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -2,7 +2,7 @@
   <modal-template>
     <modal-title>{{ctrl.defineConceptTitle | translate}}</modal-title>
 
-    <modal-body class="search-modal">
+    <modal-body>
       <div ng-show="ctrl.references.length > 0">
 
         <label for="reference" translate>Reference</label>
