--- a/src/components/model/searchRequireModal.html
+++ b/src/components/model/searchRequireModal.html
@@ -1,7 +1,7 @@
 <modal-template>
   <modal-title translate>Search requires</modal-title>
 
-  <modal-body class="search-modal">
+  <modal-body>
     <div class="clearfix" style="margin-bottom: 15px">
       <button type="button" class="btn btn-default btn-md pull-right" ng-click="ctrl.createNew()">
         <span class="glyphicon glyphicon-plus"></span>
