--- a/src/components/model/searchSchemeModal.html
+++ b/src/components/model/searchSchemeModal.html
@@ -1,7 +1,7 @@
 <modal-template>
   <modal-title translate>Search schemes</modal-title>
 
-  <modal-body class="search-modal">
+  <modal-body>
     <div class="row">
       <div class="col-md-6">
         <div class="input-group input-group-lg">
