--- a/src/components/editor/addConceptModal.html
+++ b/src/components/editor/addConceptModal.html
@@ -2,7 +2,7 @@
   <modal-template>
     <modal-title>{{ctrl.defineConceptTitle | translate}}</modal-title>
 
-    <modal-body class="search-modal">
+    <modal-body>
 
       <editable title="Concept">
         <div class="input-group input-group-md">
