--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -2,7 +2,7 @@
   <modal-template>
     <modal-title translate>Search predicates</modal-title>
 
-    <modal-body class="search-modal">
+    <modal-body>
 
       <div ng-if="!ctrl.onlySelection">
         <button type="button" class="btn btn-default btn-md pull-right" ng-click="ctrl.createNew('owl:ObjectProperty')" ng-show="ctrl.isAssociationAddable()" style="margin-left: 10px">
