--- a/src/components/model/addRequireModal.html
+++ b/src/components/model/addRequireModal.html
@@ -2,7 +2,7 @@
   <modal-template>
     <modal-title translate>Add require</modal-title>
 
-    <modal-body class="search-modal">
+    <modal-body>
 
       <editable title="Label">
         <div class="input-group input-group-md">
