More exact localizations

--- a/src/components/editor/addConceptModal.html
+++ b/src/components/editor/addConceptModal.html
@@ -16,7 +16,7 @@
         </div>
       </editable>
 
-      <editable title="Label">
+      <editable title="{{ctrl.labelTitle}}">
         <div class="input-group input-group-md">
           <input id="name" type="text" class="form-control" required ng-model="ctrl.label" />
         </div>
