--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -35,7 +35,7 @@
         <p>{{ctrl.concept.comment | translateValue}}</p>
 
         <div ng-if="ctrl.newCreation">
-          <editable title="Label">
+          <editable title="{{ctrl.labelTitle}}">
             <div class="input-group input-group-md">
               <input id="name" type="text" class="form-control" required ng-model="ctrl.label" />
             </div>
