Disable default editing for modals that actually handle their editing modes

--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -1,5 +1,5 @@
 <form name="form" class="editable-form">
-  <modal-template>
+  <modal-template editing="false">
     <modal-title>
       <span ng-show="ctrl.typeSelectable" translate>Search attributes and associations</span>
       <span ng-hide="ctrl.typeSelectable">{{('Search ' + ctrl.type + 's') | translate}}</span>
