--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="col-md-4 search-results">
-          <div ng-repeat="predicate in ctrl.searchResults() track by predicate.id">
+          <div ng-repeat="predicate in ctrl.searchResults track by predicate.id">
             <div ng-class="['search-result', {selected: ctrl.isSelected(predicate)}]" ng-click="ctrl.selectPredicate(predicate)">
               <i ng-class="predicate.glyphIconClass"></i>
               <h5>{{predicate | translateLabel}}</h5>
