--- a/src/components/model/searchRequireModal.html
+++ b/src/components/model/searchRequireModal.html
@@ -20,7 +20,7 @@
       </div>
 
       <div class="col-md-6 search-results with-button">
-        <div ng-repeat="require in ctrl.searchResults() track by require.id">
+        <div ng-repeat="require in ctrl.searchResults track by require.id">
           <div ng-class="['search-result', {selected: ctrl.isSelected(require)}]" ng-click="ctrl.selectRequire(require)">
             <h5>{{require | translateLabel}}</h5>
             <p>{{require.namespace}}</p>
