--- a/src/components/model/searchRequireModal.html
+++ b/src/components/model/searchRequireModal.html
@@ -14,17 +14,17 @@
         <div class="input-group input-group-lg">
           <input autofocus type="text" class="form-control" placeholder="{{'search require' | translate}}"
                  ng-model="ctrl.searchText"
-                 ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }" />
+                 ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }"
+                 key-control="ctrl.searchResults" />
           <i class="glyphicon glyphicon-search form-control-feedback"></i>
         </div>
       </div>
 
       <div class="col-md-6 search-results with-button">
-        <div ng-repeat="require in ctrl.searchResults track by require.id">
-          <div ng-class="['search-result', {selected: ctrl.isSelected(require)}]" ng-click="ctrl.selectRequire(require)">
-            <h5>{{require | translateLabel}}</h5>
-            <p>{{require.namespace}}</p>
-          </div>
+        <div ng-repeat="require in ctrl.searchResults track by require.id"
+             class="search-result" ng-click="ctrl.selectRequire(require)" key-control-selection>
+          <h5>{{require | translateLabel}}</h5>
+          <p>{{require.namespace}}</p>
         </div>
       </div>
     </div>
@@ -32,6 +32,5 @@
 
   <modal-buttons>
     <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Cancel</button>
-    <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selectedRequire" translate>Use require</button>
   </modal-buttons>
 </modal-template>
