--- a/src/components/model/searchSchemeModal.html
+++ b/src/components/model/searchSchemeModal.html
@@ -7,16 +7,16 @@
         <div class="input-group input-group-lg">
           <input autofocus type="text" class="form-control" placeholder="{{'search scheme' | translate}}"
                  ng-model="ctrl.searchText"
-                 ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }" />
+                 ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }"
+                 key-control="ctrl.searchResults" />
           <i class="glyphicon glyphicon-search form-control-feedback"></i>
         </div>
       </div>
 
       <div class="col-md-6 search-results">
-        <div ng-repeat="scheme in ctrl.searchResults track by scheme.id">
-          <div ng-class="['search-result', {selected: ctrl.isSelected(scheme)}]" ng-click="ctrl.selectScheme(scheme)">
-            <h5>{{scheme.title}}</h5>
-          </div>
+        <div ng-repeat="scheme in ctrl.searchResults track by scheme.id"
+             class="search-result" ng-click="ctrl.selectScheme(scheme)" key-control-selection>
+          <h5>{{scheme.title}}</h5>
         </div>
       </div>
     </div>
@@ -24,6 +24,5 @@
 
   <modal-buttons>
     <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Cancel</button>
-    <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selectedScheme" translate>Use scheme</button>
   </modal-buttons>
 </modal-template>
