Combine classSelect and predicateSelect as curieSelect

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -11,7 +11,7 @@
 </editable>
 
 <editable title="Superclass" link="ctrl.linkToSubclass()">
-  <class-select id="superClass" curie="ctrl.class.subClassOf" model="ctrl.model"></class-select>
+  <curie-select id="superClass" type="class" curie="ctrl.class.subClassOf" model="ctrl.model"></curie-select>
 </editable>
 
 <non-editable title="Is defined by" value="ctrl.class.modelId" link="ctrl.class.iowUrl()"></non-editable>
