--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -28,7 +28,7 @@
       <span ng-class="property.glyphIconClass"></span>
       <span>{{property | translateLabel}}</span>
       <accordion-chevron is-open="ctrl.propertyViews[property.id].isOpen"></accordion-chevron>
-      <div class="property-ordering pull-right" ng-show="ctrl.isEditing()">
+      <div class="property-ordering" ng-show="ctrl.isEditing()">
         <span ng-show="!$first"
               class="glyphicon glyphicon-chevron-up"
               ng-click="ctrl.movePropertyUp($event, property)"></span>
