--- a/src/components/form/nonEditable.html
+++ b/src/components/form/nonEditable.html
@@ -1,5 +1,5 @@
-<div ng-show="ctrl.value">
+<div ng-if="ctrl.item.displayValue">
   <label>{{ctrl.title | translate}}</label>
-  <a ng-if="ctrl.showLink" ng-href="{{ctrl.href}}">{{ctrl.displayValue}}</a>
-  <div ng-if="ctrl.showPlain">{{ctrl.displayValue}}</div>
+  <a ng-if="ctrl.item.showLink" ng-href="{{ctrl.item.href}}">{{ctrl.item.displayValue}}</a>
+  <div ng-if="ctrl.item.showPlain">{{ctrl.item.displayValue}}</div>
 </div>
