Don't update location while loading
Closes #162

--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -1,4 +1,4 @@
-<div ng-hide="ctrl.loading">
+<div ng-hide="ctrl.firstLoading && ctrl.loading">
 
   <model-view ng-if="ctrl.model" model="ctrl.model"></model-view>
 
