--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -1,3 +1,5 @@
+<ng-transclude></ng-transclude>
+
 <div ng-show="ngModelController.$dirty">
   <ul ng-messages="ngModelController.$error" ng-messages-multiple class="errors">
     <li ng-message="invalidNamespace">{{'Invalid namespace error' | translate}}</li>
