--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -14,6 +14,8 @@
   <curie-select id="superClass" type="class" curie="ctrl.class.subClassOf" model="ctrl.model"></curie-select>
 </editable>
 
+<editable-multiple-curie-select id="equivalentClass" type="class" curies="ctrl.class.equivalentClasses" model="ctrl.model"></editable-multiple-curie-select>
+
 <non-editable title="Is defined by" value="ctrl.class.modelId" link="ctrl.class.iowUrl()"></non-editable>
 
 <editable title="State" value-as-localization-key="true" ng-if="!ctrl.class.unsaved">
