--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -14,6 +14,8 @@
   <curie-select id="superPredicate" type="{{ctrl.predicate.type}}" curie="ctrl.predicate.subPropertyOf" model="ctrl.model"></curie-select>
 </editable>
 
+<editable-multiple-curie-select id="equivalentProperty" type="{{ctrl.predicate.type}}" curies="ctrl.predicate.equivalentProperties" model="ctrl.model"></editable-multiple-curie-select>
+
 <editable ng-if="ctrl.predicate.isAttribute()" title="Range" name="Range">
   <range-select id="predicateRange" range="ctrl.predicate.dataType"></range-select>
 </editable>
