--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -7,5 +7,6 @@
     <li ng-message="idAlreadyInUse">{{'Existing id error' | translate}}</li>
     <li ng-message="required">{{'Required error' | translate}}</li>
     <li ng-message="requiredLocalized">{{'Required localized error' | translate}}</li>
+    <li ng-message="duplicate">{{'Duplicate error' | translate}}</li>
   </ul>
 </div>
