--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -8,5 +8,6 @@
     <li ng-message="required">{{'Required error' | translate}}</li>
     <li ng-message="requiredLocalized">{{'Required localized error' | translate}}</li>
     <li ng-message="duplicate">{{'Duplicate error' | translate}}</li>
+    <li ng-message="string">{{'String error' | translate}}</li>
   </ul>
 </div>
