--- a/src/components/model/addRequireModal.html
+++ b/src/components/model/addRequireModal.html
@@ -6,19 +6,19 @@
 
       <editable title="Label">
         <div class="input-group input-group-md">
-          <input id="label" type="text" class="form-control" autofocus required ng-model="ctrl.label" />
+          <input id="label" type="text" class="form-control" autofocus required string-input ng-model="ctrl.label" />
         </div>
       </editable>
 
       <editable title="Namespace">
         <div class="input-group input-group-md">
-          <input id="namespace" class="form-control" required namespace-input ng-model="ctrl.namespace" />
+          <input id="namespace" class="form-control" required namespace-input string-input ng-model="ctrl.namespace" />
         </div>
       </editable>
 
       <editable title="Prefix">
         <div class="input-group input-group-md">
-          <input id="prefix" type="text" class="form-control" required ng-model="ctrl.prefix" />
+          <input id="prefix" type="text" class="form-control" required string-input ng-model="ctrl.prefix" />
         </div>
       </editable>
 
